--- a/index.html
+++ b/index.html
@@ -1,11 +1,145 @@
 <!DOCTYPE html>
-<html>
-    <body>
-        <h1>
-            Hello World
-        </h1>
-        <p>
-            I'm hosted with GitHub Pages.
-        </p>
-    </body>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Conner Hobbs – CV</title>
+  <style>
+    /* Global Styles */
+    body {
+      display: flex;
+      flex-direction: column;
+      margin: 0;
+      font-family: Arial, sans-serif;
+      color: #333;
+    }
+    /* Navbar */
+    nav {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      background-color: #2c3e50;
+      z-index: 1000;
+    }
+    nav ul {
+      margin: 0;
+      padding: 0;
+      list-style: none;
+      display: flex;
+      justify-content: center;
+    }
+    nav li {
+      margin: 0;
+    }
+    nav a {
+      display: block;
+      padding: 1rem 1.5rem;
+      color: #ecf0f1;
+      text-decoration: none;
+      font-weight: bold;
+    }
+    nav a:hover {
+      background-color: #34495e;
+    }
+    /* Layout */
+    .container {
+      display: flex;
+      margin-top: 60px; /* height of navbar */
+      min-height: calc(100vh - 60px);
+    }
+    /* Sidebar */
+    aside {
+      width: 260px;
+      padding: 1.5rem;
+      background-color: #ecf0f1;
+      box-shadow: 2px 0 5px rgba(0,0,0,0.1);
+    }
+    aside img {
+      width: 100%;
+      border-radius: 50%;
+      margin-bottom: 1rem;
+    }
+    aside h1 {
+      margin: 0 0 0.5rem;
+      font-size: 1.5rem;
+    }
+    aside p {
+      margin: 0.25rem 0;
+      font-size: 0.9rem;
+    }
+    /* Main Content */
+    main {
+      flex: 1;
+      padding: 2rem;
+    }
+    section {
+      margin-bottom: 3rem;
+    }
+    section h2 {
+      margin-bottom: 0.5rem;
+      border-bottom: 2px solid #2c3e50;
+      padding-bottom: 0.25rem;
+      font-size: 1.25rem;
+    }
+  </style>
+</head>
+<body>
+  <nav>
+    <ul>
+      <li><a href="#research-interests">Research Interests</a></li>
+      <li><a href="#education">Education</a></li>
+      <li><a href="#research-papers">Research Papers</a></li>
+      <li><a href="#technical-projects">Technical Projects</a></li>
+      <li><a href="#industry-experience">Industry Experience</a></li>
+      <li><a href="#speaking-engagements">Speaking Engagements</a></li>
+      <li><a href="#other-activities">Other Activities</a></li>
+      <li><a href="#contact">Contact</a></li>
+    </ul>
+  </nav>
+  <div class="container">
+    <aside>
+      <img src="profile.jpg" alt="Conner Hobbs">
+      <h1>Conner Hobbs</h1>
+      <p>Email: conner.hobbs@example.com</p>
+      <p>Phone: (123) 456-7890</p>
+      <p>LinkedIn: <a href="https://linkedin.com/in/connerhobbs" target="_blank">linkedin.com/in/connerhobbs</a></p>
+      <p>GitHub: <a href="https://github.com/connerhobbs" target="_blank">github.com/connerhobbs</a></p>
+    </aside>
+    <main>
+      <section id="research-interests">
+        <h2>Research Interests</h2>
+        <p>[List your high-level research interests here]</p>
+      </section>
+      <section id="education">
+        <h2>Education</h2>
+        <p>[Your degree, institution, and year]</p>
+      </section>
+      <section id="research-papers">
+        <h2>Research Papers</h2>
+        <p>[List of selected publications with citations]</p>
+      </section>
+      <section id="technical-projects">
+        <h2>Technical Projects</h2>
+        <p>[Summary of technical projects, e.g., Agentforce, Dynamics of History, PMAnalytics]</p>
+      </section>
+      <section id="industry-experience">
+        <h2>Industry Experience</h2>
+        <p>[Your roles, companies, and key accomplishments]</p>
+      </section>
+      <section id="speaking-engagements">
+        <h2>Speaking Engagements</h2>
+        <p>[Conferences and events where you presented]</p>
+      </section>
+      <section id="other-activities">
+        <h2>Other Activities</h2>
+        <p>[Volunteer work, extracurriculars, band activities]</p>
+      </section>
+      <section id="contact">
+        <h2>Contact</h2>
+        <p>Feel free to reach out via email or LinkedIn for collaborations or inquiries.</p>
+      </section>
+    </main>
+  </div>
+</body>
 </html>
