--- a/index.html
+++ b/index.html
@@ -5,139 +5,145 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Conner Hobbs – CV</title>
   <style>
-    /* Global Styles */
-    body {
-      display: flex;
-      flex-direction: column;
-      margin: 0;
-      font-family: Arial, sans-serif;
-      color: #333;
-    }
-    /* Navbar */
-    nav {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      background-color: #2c3e50;
-      z-index: 1000;
-    }
-    nav ul {
-      margin: 0;
-      padding: 0;
-      list-style: none;
-      display: flex;
-      justify-content: center;
-    }
-    nav li {
-      margin: 0;
-    }
-    nav a {
-      display: block;
-      padding: 1rem 1.5rem;
-      color: #ecf0f1;
-      text-decoration: none;
-      font-weight: bold;
-    }
-    nav a:hover {
-      background-color: #34495e;
-    }
-    /* Layout */
-    .container {
-      display: flex;
-      margin-top: 60px; /* height of navbar */
-      min-height: calc(100vh - 60px);
-    }
-    /* Sidebar */
-    aside {
-      width: 260px;
-      padding: 1.5rem;
-      background-color: #ecf0f1;
-      box-shadow: 2px 0 5px rgba(0,0,0,0.1);
-    }
-    aside img {
-      width: 100%;
-      border-radius: 50%;
-      margin-bottom: 1rem;
-    }
-    aside h1 {
-      margin: 0 0 0.5rem;
-      font-size: 1.5rem;
-    }
-    aside p {
-      margin: 0.25rem 0;
-      font-size: 0.9rem;
-    }
-    /* Main Content */
-    main {
-      flex: 1;
-      padding: 2rem;
-    }
-    section {
-      margin-bottom: 3rem;
-    }
-    section h2 {
-      margin-bottom: 0.5rem;
-      border-bottom: 2px solid #2c3e50;
-      padding-bottom: 0.25rem;
-      font-size: 1.25rem;
-    }
+    /* Reset & Base */
+    * { margin: 0; padding: 0; box-sizing: border-box; }
+    body { font-family: Arial, sans-serif; color: #333; line-height: 1.6; }
+    a { color: #0077cc; text-decoration: none; }
+    a:hover { text-decoration: underline; }
+
+    /* Wrapper */
+    .wrapper { max-width: 960px; margin: 0 auto; padding: 1rem; }
+
+    /* Header */
+    header { display: flex; align-items: center; gap: 1rem; padding-bottom: 1rem; border-bottom: 1px solid #ccc; }
+    .profile-pic { width: 120px; height: 120px; border-radius: 50%; object-fit: cover; }
+    .heading-info h1 { font-size: 2rem; margin-bottom: 0.25rem; }
+    .heading-info .title { font-size: 1rem; color: #666; }
+    .contact-list { margin-top: 0.5rem; font-size: 0.9rem; display: flex; gap: 1rem; }
+
+    /* Nav */
+    nav { margin-top: 1rem; border-bottom: 1px solid #ccc; }
+    nav ul { list-style: none; display: flex; gap: 1.5rem; padding-bottom: 0.5rem; }
+    nav a { text-transform: uppercase; font-size: 0.9rem; font-weight: bold; color: #333; }
+
+    /* Sections */
+    section { padding: 2rem 0; border-bottom: 1px solid #eee; }
+    section:last-of-type { border-bottom: none; }
+    section h2 { font-size: 1.5rem; margin-bottom: 1rem; }
+    ul { list-style: disc inside; }
+    li { margin-bottom: 0.5rem; }
+    .meta { font-style: italic; color: #555; }
   </style>
 </head>
 <body>
-  <nav>
-    <ul>
-      <li><a href="#research-interests">Research Interests</a></li>
-      <li><a href="#education">Education</a></li>
-      <li><a href="#research-papers">Research Papers</a></li>
-      <li><a href="#technical-projects">Technical Projects</a></li>
-      <li><a href="#industry-experience">Industry Experience</a></li>
-      <li><a href="#speaking-engagements">Speaking Engagements</a></li>
-      <li><a href="#other-activities">Other Activities</a></li>
-      <li><a href="#contact">Contact</a></li>
-    </ul>
-  </nav>
-  <div class="container">
-    <aside>
-      <img src="profile.jpg" alt="Conner Hobbs">
-      <h1>Conner Hobbs</h1>
-      <p>Email: conner.hobbs@example.com</p>
-      <p>Phone: (123) 456-7890</p>
-      <p>LinkedIn: <a href="https://linkedin.com/in/connerhobbs" target="_blank">linkedin.com/in/connerhobbs</a></p>
-      <p>GitHub: <a href="https://github.com/connerhobbs" target="_blank">github.com/connerhobbs</a></p>
-    </aside>
+  <div class="wrapper">
+    <header>
+      <img class="profile-pic" src="profile.jpg" alt="Conner Hobbs">
+      <div class="heading-info">
+        <h1>Conner Hobbs</h1>
+        <div class="title">Senior Forward Deployed AI Engineer, Agentforce at Salesforce</div>
+        <div class="contact-list">
+          <div>Email: <a href="mailto:hobbs.conner96@gmail.com">hobbs.conner96@gmail.com</a></div>
+          <div>Phone: (317) 667-6832</div>
+          <div>LinkedIn: <a href="https://linkedin.com/in/connerhobbs" target="_blank">linkedin.com/in/connerhobbs</a></div>
+          <div>GitHub: <a href="https://github.com/connerhobbs" target="_blank">github.com/connerhobbs</a></div>
+        </div>
+      </div>
+    </header>
+
+    <nav>
+      <ul>
+        <li><a href="#research-interests">Research Interests</a></li>
+        <li><a href="#education">Education</a></li>
+        <li><a href="#research-papers">Research Papers</a></li>
+        <li><a href="#technical-projects">Technical Projects</a></li>
+        <li><a href="#industry-experience">Industry Experience</a></li>
+        <li><a href="#speaking-engagements">Speaking Engagements</a></li>
+        <li><a href="#personal-activities">Personal Activities</a></li>
+      </ul>
+    </nav>
+
     <main>
       <section id="research-interests">
         <h2>Research Interests</h2>
-        <p>[List your high-level research interests here]</p>
+        <ul>
+          <li>Artificial Intelligence</li>
+          <li>Generative & Agentic Systems</li>
+          <li>NLP & Meta-Semantic Understanding</li>
+          <li>Scientific Machine Learning</li>
+          <li>Applied Machine Learning</li>
+          <li>Knowledge-Augmented LLMs</li>
+          <li>Temporal Graph Neural Networks (TGNNs) & Physics-Informed Neural Operators (PINNs)</li>
+          <li>AI for History</li>
+          <li>AI for Good</li>
+        </ul>
       </section>
+
       <section id="education">
         <h2>Education</h2>
-        <p>[Your degree, institution, and year]</p>
+        <ul>
+          <li>
+            <strong>M.S., Artificial Intelligence</strong>, Purdue University, 2025 — West Lafayette, IN<br>
+            <span class="meta">Coursework: Artificial Intelligence, Machine Learning, Reinforcement Learning, Linear Algebra, Data Mining, AI Policy</span>
+          </li>
+          <li>
+            <strong>M.S., IT Management</strong>, Indiana University, 2023 — Bloomington, IN<br>
+            <span class="meta">Coursework: Database Management, Cloud Computing, Cybersecurity, IT Management, Software Development</span>
+          </li>
+          <li>
+            <strong>B.S.E., Mechanical Engineering</strong>, Purdue University, 2018 — West Lafayette, IN<br>
+            <span class="meta">Coursework: Scientific Computing, Numerical Methods, Gas Dynamics, Fluid Dynamics, Thermodynamics, Systems</span>
+          </li>
+        </ul>
       </section>
+
       <section id="research-papers">
         <h2>Research Papers</h2>
-        <p>[List of selected publications with citations]</p>
+        <ul>
+          <li><strong>[Working]</strong> Coupled PINNs: Learning Physics Across Boundaries — Developed neural solvers for coupled PDE systems by enforcing interface dynamics and solving across multiple domains.</li>
+          <li><strong>[Working]</strong> FLASH+TGNN: Adaptive Temporal Sampling in Dynamic Graphs — Enhanced temporal graph neural networks with a new hybrid sampling technique to better capture latent dependencies.</li>
+          <li><strong>[Working]</strong> LeanVectors: Optimizing Sparse Retrieval with Random and Learned Projections — Benchmarked fast retrieval methods using sparse projections to accelerate search in high-dimensional vector spaces, drawing from ACORN and SOLAR frameworks.</li>
+          <li><strong>[2]</strong> Linguistic Learning: A Meta-Semantic Framework for Compositional Generalization — Built a hybrid approach using SRL, rule-based systems, and structured prompts to improve compositional generalization in transformer and LSTM models.</li>
+          <li><strong>[1]</strong> RAG Reimagined: Evaluating Retrieval-Augmented Generation at Scale — Designed and tested new methods to evaluate RAG models across scalability, latency, and domain adaptation, bridging academic rigor with production-ready deployment.</li>
+        </ul>
       </section>
+
       <section id="technical-projects">
         <h2>Technical Projects</h2>
-        <p>[Summary of technical projects, e.g., Agentforce, Dynamics of History, PMAnalytics]</p>
+        <ul>
+          <li><strong>Agentforce: Building Recursive Agents for AI-Driven Customer Success</strong> — Designed and deployed a multi-agent system that enables agents to dynamically create and train sub-agents to handle diverse customer service tasks. Integrated feedback loops, prompt chaining, and organizational deployment mechanisms to improve customer satisfaction and time to value at scale.</li>
+          <li><strong>Dynamics of History: Reimagining AI for History, Culture, and Societies</strong> — A digital humanities initiative applying AI to the evolution of civilizations through analysis of historical texts, trade data, and governance records. Built tools for pattern recognition and cultural modeling to uncover long-term societal trends and collapse dynamics.</li>
+          <li><strong>PMAnalytics: Data-Driven Insights for Property Managers</strong> — Developed and launched a cloud-based SaaS platform that empowers property managers with portfolio analytics and decision support tools. Led development of the core architecture using Google Cloud, drove customer acquisition to over $100K ARR, and presented at conferences with over 20,000 attendees.</li>
+        </ul>
       </section>
+
       <section id="industry-experience">
         <h2>Industry Experience</h2>
-        <p>[Your roles, companies, and key accomplishments]</p>
+        <ul>
+          <li><strong>Salesforce</strong> — Senior Forward Deployed AI Engineer, Agentforce (2024–Present)</li>
+          <li><strong>PMAnalytics</strong> — Founder & CEO (2021–2024)</li>
+          <li><strong>Various Technical & Engineering Roles:</strong> Salesforce Data Cloud (2023–2024); Salesforce Marketing Cloud (2020–2023); Infosys (2018–2020)</li>
+        </ul>
       </section>
+
       <section id="speaking-engagements">
         <h2>Speaking Engagements</h2>
-        <p>[Conferences and events where you presented]</p>
+        <ul>
+          <li><strong>2025 London World Tour</strong> — Agentforce Technical Lead delivering high-value theatre sessions and SIC executive engagements.</li>
+          <li><strong>2025 TrailblazerDX</strong> — Technical Lead supporting Agentforce consultations deploying 1,000+ agents to various customer environments.</li>
+          <li><strong>2025 Salesforce Partner Summit</strong> — Subject Matter Expert presenting Agentforce and Data Cloud best practices to 150+ partners.</li>
+          <li><strong>2023 Midwest Multifamily Conference</strong> — Launched PMAnalytics, delivering a PaaS analytics product to the real estate industry.</li>
+          <li><strong>Various Agentforce World Tour</strong> — Presented Agentforce, Data Cloud, and Customer Success in various capacities to 15,000+ attendees.</li>
+        </ul>
       </section>
-      <section id="other-activities">
-        <h2>Other Activities</h2>
-        <p>[Volunteer work, extracurriculars, band activities]</p>
-      </section>
-      <section id="contact">
-        <h2>Contact</h2>
-        <p>Feel free to reach out via email or LinkedIn for collaborations or inquiries.</p>
+
+      <section id="personal-activities">
+        <h2>Personal Activities</h2>
+        <ul>
+          <li><strong>Pike High School, 1018 Robotics</strong> — Software Development Volunteer mentoring the software team in codebase management, documentation, and testing.</li>
+          <li><strong>Triathlete</strong> — Competed and trained for multiple triathlons across the Midwest.</li>
+          <li><strong>The Dirty Tweeds</strong> — Singer-songwriter, guitar & banjo, website admin: lead songwriter and instrumentalist, recording two original albums.</li>
+        </ul>
       </section>
     </main>
   </div>
