--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <body>
   <div class="wrapper">
     <header>
-      <img class="profile-pic" src="profile.jpg" alt="Conner Hobbs">
+      <img class="profile-pic" src="profile.jpeg" alt="Conner Hobbs">
       <div class="heading-info">
         <h1>Conner Hobbs</h1>
         <div class="title">Senior Forward Deployed AI Engineer, Agentforce at Salesforce</div>
