--- a/index.html
+++ b/index.html
@@ -4,36 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Conner Hobbs</title>
-  <style>
-    /* Reset & Base */
-    * { margin: 0; padding: 0; box-sizing: border-box; }
-    body { font-family: Arial, sans-serif; color: #333; line-height: 1.6; }
-    a { color: #0077cc; text-decoration: none; }
-    a:hover { text-decoration: underline; }
-
-    /* Wrapper */
-    .wrapper { max-width: 960px; margin: 0 auto; padding: 1rem; }
-
-    /* Header */
-    header { display: flex; align-items: center; gap: 1rem; padding-bottom: 1rem; border-bottom: 1px solid #ccc; }
-    .profile-pic { width: 120px; height: 120px; border-radius: 50%; object-fit: cover; }
-    .heading-info h1 { font-size: 2rem; margin-bottom: 0.25rem; }
-    .heading-info .title { font-size: 1rem; color: #666; }
-    .contact-list { margin-top: 0.5rem; font-size: 0.9rem; display: flex; gap: 1rem; }
-
-    /* Nav */
-    nav { margin-top: 1rem; border-bottom: 1px solid #ccc; }
-    nav ul { list-style: none; display: flex; gap: 1.5rem; padding-bottom: 0.5rem; }
-    nav a { text-transform: uppercase; font-size: 0.9rem; font-weight: bold; color: #333; }
-
-    /* Sections */
-    section { padding: 2rem 0; border-bottom: 1px solid #eee; }
-    section:last-of-type { border-bottom: none; }
-    section h2 { font-size: 1.5rem; margin-bottom: 1rem; }
-    ul { list-style: disc inside; }
-    li { margin-bottom: 0.5rem; }
-    .meta { font-style: italic; color: #555; }
-  </style>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="wrapper">
