--- a/index.html
+++ b/index.html
@@ -3,21 +3,38 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Conner Hobbs</title>
+  <title>Conner Hobbs – CV</title>
+  <!-- Font Awesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-pI1qBbS3uTfK8G+ZjsMfxs3IVE1N2F8yJlunIhQHdO4cPRQEL2oMRl+va3Crg0+YKLG2y5QZ1NqUKNhp+X9ZOA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <!-- Custom Styles -->
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="wrapper">
     <header>
-      <img class="profile-pic" src="profile.jpeg" alt="Conner Hobbs">
-      <div class="heading-info">
+      <img class="profile-pic" src="profile.jpg" alt="Conner Hobbs">
+      <div class="header-info">
         <h1>Conner Hobbs</h1>
         <div class="title">Senior Forward Deployed AI Engineer, Agentforce at Salesforce</div>
-        <div class="contact-list">
-          <div>Email: <a href="mailto:hobbs.conner96@gmail.com">hobbs.conner96@gmail.com</a></div>
-          <div>Phone: (317) 667-6832</div>
-          <div>LinkedIn: <a href="https://linkedin.com/in/connerhobbs" target="_blank">linkedin.com/in/connerhobbs</a></div>
-          <div>GitHub: <a href="https://github.com/connerhobbs" target="_blank">github.com/connerhobbs</a></div>
+        <div class="contact-row">
+          <div class="contact-item">
+            <i class="fas fa-envelope" aria-hidden="true"></i>
+            <a href="mailto:hobbs.conner96@gmail.com">hobbs.conner96@gmail.com</a>
+          </div>
+          <div class="contact-item">
+            <i class="fas fa-phone" aria-hidden="true"></i>
+            <span>(317) 667-6832</span>
+          </div>
+          <div class="contact-item">
+            <a href="https://linkedin.com/in/connerhobbs" target="_blank" aria-label="LinkedIn">
+              <i class="fab fa-linkedin" aria-hidden="true"></i>
+            </a>
+          </div>
+          <div class="contact-item">
+            <a href="https://github.com/connerhobbs" target="_blank" aria-label="GitHub">
+              <i class="fab fa-github" aria-hidden="true"></i>
+            </a>
+          </div>
         </div>
       </div>
     </header>
