research interest list

--- a/index.html
+++ b/index.html
@@ -1,139 +1,260 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Conner Hobbs – CV</title>
-  <!-- Font Awesome -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-pI1qBbS3uTfK8G+ZjsMfxs3IVE1N2F8yJlunIhQHdO4cPRQEL2oMRl+va3Crg0+YKLG2y5QZ1NqUKNhp+X9ZOA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <!-- Custom Styles -->
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  <div class="wrapper">
-    <header>
-      <img class="profile-pic" src="profile.jpeg" alt="Conner Hobbs">
-      <div class="header-info">
-        <h1>Conner Hobbs</h1>
-        <div class="title">Senior Forward Deployed AI Engineer, Agentforce at Salesforce</div>
-        <div class="contact-row">
-          <div class="contact-item">
-            <i class="fas fa-envelope" aria-hidden="true"></i>
-            <a href="mailto:hobbs.conner96@gmail.com">hobbs.conner96@gmail.com</a>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Conner Hobbs – CV</title>
+    <!-- Font Awesome -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+      integrity="sha512-pI1qBbS3uTfK8G+ZjsMfxs3IVE1N2F8yJlunIhQHdO4cPRQEL2oMRl+va3Crg0+YKLG2y5QZ1NqUKNhp+X9ZOA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <!-- Custom Styles -->
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="wrapper">
+      <header>
+        <img class="profile-pic" src="profile.jpeg" alt="Conner Hobbs" />
+        <div class="header-info">
+          <h1>Conner Hobbs</h1>
+          <div class="title">
+            Senior Forward Deployed AI Engineer, Agentforce at Salesforce
           </div>
-          <div class="contact-item">
-            <i class="fas fa-phone" aria-hidden="true"></i>
-            <span>(317) 667-6832</span>
-          </div>
-          <div class="contact-item">
-            <a href="https://linkedin.com/in/connerhobbs" target="_blank" aria-label="LinkedIn">
-              <i class="fab fa-linkedin" aria-hidden="true"></i>
-            </a>
-          </div>
-          <div class="contact-item">
-            <a href="https://github.com/connerhobbs" target="_blank" aria-label="GitHub">
-              <i class="fab fa-github" aria-hidden="true"></i>
-            </a>
+          <div class="contact-row">
+            <div class="contact-item">
+              <i class="fas fa-envelope" aria-hidden="true"></i>
+              <a href="mailto:hobbs.conner96@gmail.com"
+                >hobbs.conner96@gmail.com</a
+              >
+            </div>
+            <div class="contact-item">
+              <i class="fas fa-phone" aria-hidden="true"></i>
+              <span>(317) 667-6832</span>
+            </div>
+            <div class="contact-item">
+              <a
+                href="https://linkedin.com/in/connerhobbs"
+                target="_blank"
+                aria-label="LinkedIn"
+              >
+                <i class="fab fa-linkedin" aria-hidden="true"></i>
+              </a>
+            </div>
+            <div class="contact-item">
+              <a
+                href="https://github.com/connerhobbs"
+                target="_blank"
+                aria-label="GitHub"
+              >
+                <i class="fab fa-github" aria-hidden="true"></i>
+              </a>
+            </div>
           </div>
         </div>
-      </div>
-    </header>
+      </header>
 
-    <nav>
-      <ul>
-        <li><a href="#research-interests">Research Interests</a></li>
-        <li><a href="#education">Education</a></li>
-        <li><a href="#research-papers">Research Papers</a></li>
-        <li><a href="#technical-projects">Technical Projects</a></li>
-        <li><a href="#industry-experience">Industry Experience</a></li>
-        <li><a href="#speaking-engagements">Speaking Engagements</a></li>
-        <li><a href="#personal-activities">Personal Activities</a></li>
-      </ul>
-    </nav>
-
-    <main>
-      <section id="research-interests">
-        <h2>Research Interests</h2>
+      <nav>
         <ul>
-          <li>Artificial Intelligence</li>
-          <li>Generative & Agentic Systems</li>
-          <li>NLP & Meta-Semantic Understanding</li>
-          <li>Scientific Machine Learning</li>
-          <li>Applied Machine Learning</li>
-          <li>Knowledge-Augmented LLMs</li>
-          <li>Temporal Graph Neural Networks (TGNNs) & Physics-Informed Neural Operators (PINNs)</li>
-          <li>AI for History</li>
-          <li>AI for Good</li>
+          <li><a href="#research-interests">Research Interests</a></li>
+          <li><a href="#education-background">Education Background</a></li>
+          <li><a href="#research-papers">Research Papers</a></li>
+          <li><a href="#technical-projects">Technical Projects</a></li>
+          <li><a href="#industry-experience">Industry Experience</a></li>
+          <li><a href="#speaking-engagements">Speaking Engagements</a></li>
+          <li><a href="#personal-activities">Personal Activities</a></li>
         </ul>
-      </section>
+      </nav>
 
-      <section id="education">
-        <h2>Education</h2>
-        <ul>
-          <li>
-            <strong>M.S., Artificial Intelligence</strong>, Purdue University, 2025 — West Lafayette, IN<br>
-            <span class="meta">Coursework: Artificial Intelligence, Machine Learning, Reinforcement Learning, Linear Algebra, Data Mining, AI Policy</span>
-          </li>
-          <li>
-            <strong>M.S., IT Management</strong>, Indiana University, 2023 — Bloomington, IN<br>
-            <span class="meta">Coursework: Database Management, Cloud Computing, Cybersecurity, IT Management, Software Development</span>
-          </li>
-          <li>
-            <strong>B.S.E., Mechanical Engineering</strong>, Purdue University, 2018 — West Lafayette, IN<br>
-            <span class="meta">Coursework: Scientific Computing, Numerical Methods, Gas Dynamics, Fluid Dynamics, Thermodynamics, Systems</span>
-          </li>
-        </ul>
-      </section>
+      <main>
+        <section id="research-interests">
+          <h2>Research Interests</h2>
+          <p>
+            Artificial Intelligence – Generative & Agentic Systems – NLP &
+            Meta-Semantic Understanding – Scientific Machine Learning – Applied
+            Machine Learning – Knowledge-Augmented LLMs – Temporal Graph Neural
+            Networks (TGNNs) & Physics-Informed Neural Operators (PINNs) – AI
+            for History – AI for Good
+          </p>
+        </section>
 
-      <section id="research-papers">
-        <h2>Research Papers</h2>
-        <ul>
-          <li><strong>[Working]</strong> Coupled PINNs: Learning Physics Across Boundaries — Developed neural solvers for coupled PDE systems by enforcing interface dynamics and solving across multiple domains.</li>
-          <li><strong>[Working]</strong> FLASH+TGNN: Adaptive Temporal Sampling in Dynamic Graphs — Enhanced temporal graph neural networks with a new hybrid sampling technique to better capture latent dependencies.</li>
-          <li><strong>[Working]</strong> LeanVectors: Optimizing Sparse Retrieval with Random and Learned Projections — Benchmarked fast retrieval methods using sparse projections to accelerate search in high-dimensional vector spaces, drawing from ACORN and SOLAR frameworks.</li>
-          <li><strong>[2]</strong> Linguistic Learning: A Meta-Semantic Framework for Compositional Generalization — Built a hybrid approach using SRL, rule-based systems, and structured prompts to improve compositional generalization in transformer and LSTM models.</li>
-          <li><strong>[1]</strong> RAG Reimagined: Evaluating Retrieval-Augmented Generation at Scale — Designed and tested new methods to evaluate RAG models across scalability, latency, and domain adaptation, bridging academic rigor with production-ready deployment.</li>
-        </ul>
-      </section>
+        <section id="education-background">
+          <h2>Education</h2>
+          <ul>
+            <li>
+              <strong>M.S., Artificial Intelligence</strong>, Purdue University,
+              2025 — West Lafayette, IN<br />
+              <span class="meta"
+                >Coursework: Artificial Intelligence, Machine Learning,
+                Reinforcement Learning, Linear Algebra, Data Mining, AI
+                Policy</span
+              >
+            </li>
+            <li>
+              <strong>M.S., IT Management</strong>, Indiana University, 2023 —
+              Bloomington, IN<br />
+              <span class="meta"
+                >Coursework: Database Management, Cloud Computing,
+                Cybersecurity, IT Management, Software Development</span
+              >
+            </li>
+            <li>
+              <strong>B.S.E., Mechanical Engineering</strong>, Purdue
+              University, 2018 — West Lafayette, IN<br />
+              <span class="meta"
+                >Coursework: Scientific Computing, Numerical Methods, Gas
+                Dynamics, Fluid Dynamics, Thermodynamics, Systems</span
+              >
+            </li>
+          </ul>
+        </section>
 
-      <section id="technical-projects">
-        <h2>Technical Projects</h2>
-        <ul>
-          <li><strong>Agentforce: Building Recursive Agents for AI-Driven Customer Success</strong> — Designed and deployed a multi-agent system that enables agents to dynamically create and train sub-agents to handle diverse customer service tasks. Integrated feedback loops, prompt chaining, and organizational deployment mechanisms to improve customer satisfaction and time to value at scale.</li>
-          <li><strong>Dynamics of History: Reimagining AI for History, Culture, and Societies</strong> — A digital humanities initiative applying AI to the evolution of civilizations through analysis of historical texts, trade data, and governance records. Built tools for pattern recognition and cultural modeling to uncover long-term societal trends and collapse dynamics.</li>
-          <li><strong>PMAnalytics: Data-Driven Insights for Property Managers</strong> — Developed and launched a cloud-based SaaS platform that empowers property managers with portfolio analytics and decision support tools. Led development of the core architecture using Google Cloud, drove customer acquisition to over $100K ARR, and presented at conferences with over 20,000 attendees.</li>
-        </ul>
-      </section>
+        <section id="research-papers">
+          <h2>Research Papers</h2>
+          <ul>
+            <li>
+              <strong>[Working]</strong> Coupled PINNs: Learning Physics Across
+              Boundaries — Developed neural solvers for coupled PDE systems by
+              enforcing interface dynamics and solving across multiple domains.
+            </li>
+            <li>
+              <strong>[Working]</strong> FLASH+TGNN: Adaptive Temporal Sampling
+              in Dynamic Graphs — Enhanced temporal graph neural networks with a
+              new hybrid sampling technique to better capture latent
+              dependencies.
+            </li>
+            <li>
+              <strong>[Working]</strong> LeanVectors: Optimizing Sparse
+              Retrieval with Random and Learned Projections — Benchmarked fast
+              retrieval methods using sparse projections to accelerate search in
+              high-dimensional vector spaces, drawing from ACORN and SOLAR
+              frameworks.
+            </li>
+            <li>
+              <strong>[2]</strong> Linguistic Learning: A Meta-Semantic
+              Framework for Compositional Generalization — Built a hybrid
+              approach using SRL, rule-based systems, and structured prompts to
+              improve compositional generalization in transformer and LSTM
+              models.
+            </li>
+            <li>
+              <strong>[1]</strong> RAG Reimagined: Evaluating
+              Retrieval-Augmented Generation at Scale — Designed and tested new
+              methods to evaluate RAG models across scalability, latency, and
+              domain adaptation, bridging academic rigor with production-ready
+              deployment.
+            </li>
+          </ul>
+        </section>
 
-      <section id="industry-experience">
-        <h2>Industry Experience</h2>
-        <ul>
-          <li><strong>Salesforce</strong> — Senior Forward Deployed AI Engineer, Agentforce (2024–Present)</li>
-          <li><strong>PMAnalytics</strong> — Founder & CEO (2021–2024)</li>
-          <li><strong>Various Technical & Engineering Roles:</strong> Salesforce Data Cloud (2023–2024); Salesforce Marketing Cloud (2020–2023); Infosys (2018–2020)</li>
-        </ul>
-      </section>
+        <section id="technical-projects">
+          <h2>Technical Projects</h2>
+          <ul>
+            <li>
+              <strong
+                >Agentforce: Building Recursive Agents for AI-Driven Customer
+                Success</strong
+              >
+              — Designed and deployed a multi-agent system that enables agents
+              to dynamically create and train sub-agents to handle diverse
+              customer service tasks. Integrated feedback loops, prompt
+              chaining, and organizational deployment mechanisms to improve
+              customer satisfaction and time to value at scale.
+            </li>
+            <li>
+              <strong
+                >Dynamics of History: Reimagining AI for History, Culture, and
+                Societies</strong
+              >
+              — A digital humanities initiative applying AI to the evolution of
+              civilizations through analysis of historical texts, trade data,
+              and governance records. Built tools for pattern recognition and
+              cultural modeling to uncover long-term societal trends and
+              collapse dynamics.
+            </li>
+            <li>
+              <strong
+                >PMAnalytics: Data-Driven Insights for Property Managers</strong
+              >
+              — Developed and launched a cloud-based SaaS platform that empowers
+              property managers with portfolio analytics and decision support
+              tools. Led development of the core architecture using Google
+              Cloud, drove customer acquisition to over $100K ARR, and presented
+              at conferences with over 20,000 attendees.
+            </li>
+          </ul>
+        </section>
 
-      <section id="speaking-engagements">
-        <h2>Speaking Engagements</h2>
-        <ul>
-          <li><strong>2025 London World Tour</strong> — Agentforce Technical Lead delivering high-value theatre sessions and SIC executive engagements.</li>
-          <li><strong>2025 TrailblazerDX</strong> — Technical Lead supporting Agentforce consultations deploying 1,000+ agents to various customer environments.</li>
-          <li><strong>2025 Salesforce Partner Summit</strong> — Subject Matter Expert presenting Agentforce and Data Cloud best practices to 150+ partners.</li>
-          <li><strong>2023 Midwest Multifamily Conference</strong> — Launched PMAnalytics, delivering a PaaS analytics product to the real estate industry.</li>
-          <li><strong>Various Agentforce World Tour</strong> — Presented Agentforce, Data Cloud, and Customer Success in various capacities to 15,000+ attendees.</li>
-        </ul>
-      </section>
+        <section id="industry-experience">
+          <h2>Industry Experience</h2>
+          <ul>
+            <li>
+              <strong>Salesforce</strong> — Senior Forward Deployed AI Engineer,
+              Agentforce (2024–Present)
+            </li>
+            <li><strong>PMAnalytics</strong> — Founder & CEO (2021–2024)</li>
+            <li>
+              <strong>Various Technical & Engineering Roles:</strong> Salesforce
+              Data Cloud (2023–2024); Salesforce Marketing Cloud (2020–2023);
+              Infosys (2018–2020)
+            </li>
+          </ul>
+        </section>
 
-      <section id="personal-activities">
-        <h2>Personal Activities</h2>
-        <ul>
-          <li><strong>Pike High School, 1018 Robotics</strong> — Software Development Volunteer mentoring the software team in codebase management, documentation, and testing.</li>
-          <li><strong>Triathlete</strong> — Competed and trained for multiple triathlons across the Midwest.</li>
-          <li><strong>The Dirty Tweeds</strong> — Singer-songwriter, guitar & banjo, website admin: lead songwriter and instrumentalist, recording two original albums.</li>
-        </ul>
-      </section>
-    </main>
-  </div>
-</body>
+        <section id="speaking-engagements">
+          <h2>Speaking Engagements</h2>
+          <ul>
+            <li>
+              <strong>2025 London World Tour</strong> — Agentforce Technical
+              Lead delivering high-value theatre sessions and SIC executive
+              engagements.
+            </li>
+            <li>
+              <strong>2025 TrailblazerDX</strong> — Technical Lead supporting
+              Agentforce consultations deploying 1,000+ agents to various
+              customer environments.
+            </li>
+            <li>
+              <strong>2025 Salesforce Partner Summit</strong> — Subject Matter
+              Expert presenting Agentforce and Data Cloud best practices to 150+
+              partners.
+            </li>
+            <li>
+              <strong>2023 Midwest Multifamily Conference</strong> — Launched
+              PMAnalytics, delivering a PaaS analytics product to the real
+              estate industry.
+            </li>
+            <li>
+              <strong>Various Agentforce World Tour</strong> — Presented
+              Agentforce, Data Cloud, and Customer Success in various capacities
+              to 15,000+ attendees.
+            </li>
+          </ul>
+        </section>
+
+        <section id="personal-activities">
+          <h2>Personal Activities</h2>
+          <ul>
+            <li>
+              <strong>Pike High School, 1018 Robotics</strong> — Software
+              Development Volunteer mentoring the software team in codebase
+              management, documentation, and testing.
+            </li>
+            <li>
+              <strong>Triathlete</strong> — Competed and trained for multiple
+              triathlons across the Midwest.
+            </li>
+            <li>
+              <strong>The Dirty Tweeds</strong> — Singer-songwriter, guitar &
+              banjo, website admin: lead songwriter and instrumentalist,
+              recording two original albums.
+            </li>
+          </ul>
+        </section>
+      </main>
+    </div>
+  </body>
 </html>
