--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
   <body>
     <div class="wrapper">
       <header>
-        <img class="profile-pic" src="profile.jpeg" alt="Conner Hobbs" />
         <div class="header-info">
+          <img class="profile-pic" src="profile.jpeg" alt="Conner Hobbs" />
+
           <h1>Conner Hobbs</h1>
           <div class="title">
             Senior Forward Deployed AI Engineer, Agentforce at Salesforce
@@ -83,71 +84,65 @@
 
         <section id="education-background">
           <h2>Education</h2>
-          <ul>
-            <li>
-              <strong>M.S., Artificial Intelligence</strong>, Purdue University,
-              2025 — West Lafayette, IN<br />
-              <span class="meta"
-                >Coursework: Artificial Intelligence, Machine Learning,
-                Reinforcement Learning, Linear Algebra, Data Mining, AI
-                Policy</span
-              >
-            </li>
-            <li>
-              <strong>M.S., IT Management</strong>, Indiana University, 2023 —
-              Bloomington, IN<br />
-              <span class="meta"
-                >Coursework: Database Management, Cloud Computing,
-                Cybersecurity, IT Management, Software Development</span
-              >
-            </li>
-            <li>
-              <strong>B.S.E., Mechanical Engineering</strong>, Purdue
-              University, 2018 — West Lafayette, IN<br />
-              <span class="meta"
-                >Coursework: Scientific Computing, Numerical Methods, Gas
-                Dynamics, Fluid Dynamics, Thermodynamics, Systems</span
-              >
-            </li>
-          </ul>
+          <div class="education-entry">
+            <strong>M.S., Artificial Intelligence</strong>, Purdue University,
+            2025 — West Lafayette, IN<br />
+            <span class="meta"
+              >Coursework: Artificial Intelligence, Machine Learning,
+              Reinforcement Learning, Linear Algebra, Data Mining, AI
+              Policy</span
+            >
+          </div>
+          <div class="education-entry">
+            <strong>M.S., IT Management</strong>, Indiana University, 2023 —
+            Bloomington, IN<br />
+            <span class="meta"
+              >Coursework: Database Management, Cloud Computing, Cybersecurity,
+              IT Management, Software Development</span
+            >
+          </div>
+          <div class="education-entry">
+            <strong>B.S.E., Mechanical Engineering</strong>, Purdue University,
+            2018 — West Lafayette, IN<br />
+            <span class="meta"
+              >Coursework: Scientific Computing, Numerical Methods, Gas
+              Dynamics, Fluid Dynamics, Thermodynamics, Systems</span
+            >
+          </div>
         </section>
 
         <section id="research-papers">
           <h2>Research Papers</h2>
-          <ul>
+          <ol class="numbered-list">
             <li>
-              <strong>[Working]</strong> Coupled PINNs: Learning Physics Across
-              Boundaries — Developed neural solvers for coupled PDE systems by
-              enforcing interface dynamics and solving across multiple domains.
+              Coupled PINNs: Learning Physics Across Boundaries — Developed
+              neural solvers for coupled PDE systems by enforcing interface
+              dynamics and solving across multiple domains.
             </li>
             <li>
-              <strong>[Working]</strong> FLASH+TGNN: Adaptive Temporal Sampling
-              in Dynamic Graphs — Enhanced temporal graph neural networks with a
-              new hybrid sampling technique to better capture latent
-              dependencies.
+              FLASH+TGNN: Adaptive Temporal Sampling in Dynamic Graphs —
+              Enhanced temporal graph neural networks with a new hybrid sampling
+              technique to better capture latent dependencies.
             </li>
             <li>
-              <strong>[Working]</strong> LeanVectors: Optimizing Sparse
-              Retrieval with Random and Learned Projections — Benchmarked fast
-              retrieval methods using sparse projections to accelerate search in
-              high-dimensional vector spaces, drawing from ACORN and SOLAR
-              frameworks.
+              LeanVectors: Optimizing Sparse Retrieval with Random and Learned
+              Projections — Benchmarked fast retrieval methods using sparse
+              projections to accelerate search in high-dimensional vector
+              spaces, drawing from ACORN and SOLAR frameworks.
             </li>
             <li>
-              <strong>[2]</strong> Linguistic Learning: A Meta-Semantic
-              Framework for Compositional Generalization — Built a hybrid
-              approach using SRL, rule-based systems, and structured prompts to
-              improve compositional generalization in transformer and LSTM
-              models.
+              Linguistic Learning: A Meta-Semantic Framework for Compositional
+              Generalization — Built a hybrid approach using SRL, rule-based
+              systems, and structured prompts to improve compositional
+              generalization in transformer and LSTM models.
             </li>
             <li>
-              <strong>[1]</strong> RAG Reimagined: Evaluating
-              Retrieval-Augmented Generation at Scale — Designed and tested new
-              methods to evaluate RAG models across scalability, latency, and
-              domain adaptation, bridging academic rigor with production-ready
-              deployment.
+              RAG Reimagined: Evaluating Retrieval-Augmented Generation at Scale
+              — Designed and tested new methods to evaluate RAG models across
+              scalability, latency, and domain adaptation, bridging academic
+              rigor with production-ready deployment.
             </li>
-          </ul>
+          </ol>
         </section>
 
         <section id="technical-projects">
