--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <title>Conner Hobbs | Home</title>
+    <meta name="description" content="Homepage of Conner Hobbs">
+    <meta name="author" content="Conner Hobbs">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Conner Hobbs – CV</title>
-    <!-- Font Awesome -->
+    <!-- Font Awesome Icons-->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
@@ -12,7 +14,9 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <!-- Custom Styles -->
+    <!-- Font -->
+     <link href="https://fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
+    <!-- Stylesheet -->
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -73,7 +77,7 @@
       <main>
         <section id="research-interests">
           <h2>Research Interests</h2>
-          <p>
+          <p class="research-interest-list">
             Artificial Intelligence – Generative & Agentic Systems – NLP &
             Meta-Semantic Understanding – Scientific Machine Learning – Applied
             Machine Learning – Knowledge-Augmented LLMs – Temporal Graph Neural
